Sredjen bug sa menijem (bice collapsed ako nisu u istoj liniji)

--- a/style.css
+++ b/style.css
@@ -137,7 +137,6 @@ body {
 	font-size: 18px;
 	margin: 0px 20px 0px 20px;
 	color: white;
-	margin-top: 20px;
 }
 
 .navbar {
@@ -174,7 +173,7 @@ body {
 	margin-bottom: 10px;
 }
 
-@media (max-width: 1045px) {
+@media (max-width: 1100px) {
     .navbar-custom .navbar-header {
         float: none;
     }
@@ -201,8 +200,8 @@ body {
 		color: #a1a1a1;
     }
     .navbar-custom .navbar-nav>li>a {
-        padding-top: 10px;
-        padding-bottom: 10px;
+		margin-top: 20px;
+        padding-bottom: 20px;
 		color: #a1a1a1;
     }
 	
